Updated to iframe

--- a/site/index.html
+++ b/site/index.html
@@ -28,7 +28,7 @@
   <link rel="prefetch" href="/frames/5.html" />
   <link rel="prefetch" href="/frames/6.html" />
   <link rel="prefetch" href="/frames/7.html" />
-  <link rel="prefetch" href="/frames/8.html" />  
+  <link rel="prefetch" href="/frames/8.html" />
   <link rel="prefetch" href="/frames-chrome/1.html" />
   <link rel="prefetch" href="/frames-chrome/2.html" />
   <link rel="prefetch" href="/frames-chrome/3.html" />
@@ -62,18 +62,9 @@
     <a href="https://www.alanwsmith.com/">
       <font>alanwsmith.com</font>
     </a>
-    <font color="#dddddd"> ~ </font>
-    <a href="/about.html">
-      <font>about</font>
-    </a>
-    <font> ~ </font>
-
+    <font color="#cccccc"> ~ </font>
     <a href="https://links.alanwsmith.com">
-      <font>other html only links</font>
-    </a>
-    <font> ~ </font>
-    <a href="https://podcast.alanwsmith.com">
-      <font>podcast</font>
+      <font>other other sites</font>
     </a>
     <br />
 
@@ -89,10 +80,12 @@
                   This piece is an experiment in creating an animation using
                   only HTML. There is no JavaScript, CSS, or images involved.
                 </p>
-                <iframe  name="viewer" src="/frames/1.html" width="440" height="310"></iframe>
+                <iframe name="viewer" src="/frames/1.html" width="440" height="310"></iframe>
                 <p>
-                <a target="viewer" href="/frames-chrome/1.html">Switch to chrome version</a>
-              </p>
+                  <a target="viewer" href="/frames-chrome/1.html">Switch to smoother chrome version</a>
+                  <br />
+                  (Warning, it tends to flash/strobe a little if you're sensitive to that)
+                </p>
                 <p>
                   The frames consists of ascii art based on &quot;<a
                     href="https://en.wikipedia.org/wiki/The_Horse_in_Motion">
@@ -103,44 +96,26 @@
                 </p>
                 <p>
                   As of April, 2022, Safari and Firefox require whole seconds
-                  for the refresh. So, the
-                  <a href="/frames/1.html">
-                    <font>basic version</font>
-                  </a>
-                  is a set of eight frames running at 1FPS. Chrome allows
-                  refresh times less than a second.
-                  <a href="/frames-chrome/1.html">
-                    <font>That version</font>
-                  </a>
-                  is sixteen frames set to change every 0.1 seconds which runs
-                  at roughly 10FPS depending on the computer, network, etc...
+                  for the refresh. The first version on this pages is designed
+                  for them and refreshes at 1FPS. The Chrome version
+                  is set to refresh at 0.1sec. It runs at roughly 10fps
+                  on browsers that support it.
                 </p>
                 <p>
-                  The pages are very light, but there may be some delay and a
-                  little flash between frames if you&apos;re on a slow
-                  connection. It also may not render properly on some mobile
-                  devices due to the nature of it&apos;s construction.
-                </p>
-                <p>
-                  This site is the forth in a series inspired by
+                  This site is the forth in a series of experiments inspired by
                   <a href="https://twitter.com/whitep4nth3r/status/1510568114966171649">
                     <font>this tweet</font>
                   </a>
                   from
                   <a href="https://twitter.com/whitep4nth3r">
                     <font>whitep4nth3r</font>
-                  </a>. The other sites have
-                  <a href="https://ascii-art.alanwsmith.com/">
-                    <font>ascii art</font>
-                  </a>, a
-                  <a href="https://html-maze.alanwsmith.com/">
-                    <font>maze</font>
-                  </a>, and
-                  <a href="https://pixel-art.alanwsmith.com/">
-                    <font>pixel art</font>
-                  </a>
-                  (which is my other favorite).
+
+                  </a>.
                 </p>
+                <p>Links to the other sites <a
+                    href="https://www.alanwsmith.com/pages/post-html-only-sites--28gcduze/index.html">are here</a>
+                </p>
+
                 <p>
                   Here&apos;s
                   <a href="https://github.com/alanwsmith/html-animation.alanwsmith.com">
